<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/title"
        android:textSize="35dp"
        android:textStyle="bold"></TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="282dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:src="@drawable/caduceo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/disc"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_menu_check"
            android:layout_width="240dp"
            android:layout_height="66dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/baseline_plagiarism_40"
            android:text="@string/btn_menu_check"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_menu_cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_menu_cat"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:drawableLeft="@drawable/baseline_list_alt_40"
            android:text="@string/btn_menu_cat"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_menu_about"
            android:layout_width="205dp"
            android:layout_height="66dp"
            android:layout_marginBottom="52dp"
            android:text="@string/btn_menu_about"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/disc"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/disclaimer" />


</RelativeLayout>