<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".Fragments.CheckActivity.ResponseFragmentSano">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/btn_response_check">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/backgroundTitleSano"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/responseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responseSanoTitle"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/clTitle"
                android:layout_marginTop="0dp"
                android:background="@color/backgroundBody">

                    <ImageView
                        android:id="@+id/userImg"
                        android:layout_width="190dp"
                        android:layout_height="230dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@mipmap/ic_launcher" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/primary"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responseSanoSubTitle"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responseSanoDesc"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_horizontal|center_vertical"
                ></TextView>

        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btn_response_check"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/btn_response_check"
        android:textStyle="bold"
        android:textSize="16sp"
        android:drawableLeft="@drawable/baseline_plagiarism_40"
        android:layout_above="@+id/btn_response_cat"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_response_cat"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_response_cat"
        android:background="@drawable/botton_border"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:drawableLeft="@drawable/baseline_list_alt_24"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>