<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".Fragments.CheckActivity.ResponseFragmentSano">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/btn_atras">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/backgroundTitleEnfermo"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/responseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PlaceHolder Text"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.121" />

                <TextView
                    android:id="@+id/responseConfidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PlaceHolder Confidence"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.837" />

<!--                <ImageButton-->
<!--                    android:id="@+id/btn_reporte"-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:background="#00FFFFFF"-->
<!--                    android:src="@drawable/round_warning_35"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.983"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintVertical_bias="0.533"/>-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/clTitle"
                android:layout_marginTop="0dp"
                android:background="@color/backgroundBody">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.048">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:text="Foto del Usuario"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/userImg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Foto de Referencia"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/responseImg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.661"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"></TextView>

                    <ImageView
                        android:id="@+id/userImg"
                        android:layout_width="190dp"
                        android:layout_height="230dp"
                        android:layout_marginLeft="10dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/responseImg"
                        android:layout_width="190dp"
                        android:layout_height="230dp"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />

                </androidx.constraintlayout.widget.ConstraintLayout>




                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llImg"
                    app:layout_constraintVertical_bias="0.128">

                    <TextView
                        android:id="@+id/responseBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/placeholderBody"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/lblMoreInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/responseBody"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tv_more_info"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/responseLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/responseBody"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/lblMoreInfo"
                        android:autoLink="web"
                        android:text="@string/placeholderTitle"
                        android:textColor="@color/blue"
                        android:textSize="15sp" />

                </RelativeLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/moreDiseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/clMDTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/backgroundTitle"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/moreDiseasesTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleMoreDis"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_otras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:nestedScrollingEnabled="false">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/btn_atras"
        android:textStyle="bold"
        android:textSize="16sp"
        android:drawableLeft="@drawable/baseline_plagiarism_40"
        android:layout_above="@+id/btn_reporte"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reporte"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_reporte"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textSize="17sp"
        android:textColor="@color/red"
        android:drawableLeft="@drawable/round_warning_35"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>